objects/IPM_Risk_Indicator_Reference__c.object
<CustomObject>
    <description>IPMG - Used to hold Risk Indicator Reference information related to Risk Indicator</description>
    <fields>
        <fullName>IPM_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Nature_Of_Requirement__c</fullName>
        <label>Nature Of Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legislative Requirement</fullName>
                </value>
                <value>
                    <fullName>SIRA</fullName>
                </value>
                <value>
                    <fullName>Licence Condition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Risk_Being_Evaluated__c</fullName>
        <label>Risk Being Evaluated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Risk_Indicator_Reference_ID__c</fullName>
        <description>Used as external id for reference</description>
        <externalId>true</externalId>
        <label>Risk Indicator Reference ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IPM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conduct</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Claims Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_System_Performance_Relationship__c</fullName>
        <label>System Performance Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Effectiveness</fullName>
                </value>
                <value>
                    <fullName>Efficiency</fullName>
                </value>
                <value>
                    <fullName>Viability</fullName>
                </value>
                <value>
                    <fullName>Affordability</fullName>
                </value>
                <value>
                    <fullName>Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Top_Tier_Expectation__c</fullName>
        <label>Top Tier Expectation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Top_Tier_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Tier Requirement</label>
        <type>Checkbox</type>
    </fields>
    <label>Risk Indicator Reference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IPM_Risk_Indicator_Reference_ID__c</columns>
        <columns>IPM_Category__c</columns>
        <columns>IPM_Sub_Category__c</columns>
        <columns>IPM_Nature_Of_Requirement__c</columns>
        <columns>IPM_Status__c</columns>
        <columns>IPM_Top_Tier_Expectation__c</columns>
        <columns>IPM_Top_Tier_Requirement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Risk Indicator Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Indicator References</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>